--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
   text-decoration: none;
   font-weight: 500;
   margin-left: 0px;
-  margin-right: 132px;
+  margin-right: 20px;
+
   transition: 0.3s;
   animation: slideTop 0.5s ease forwards;
   animation-delay: calc(0.2s * var(--i));
@@ -241,7 +242,7 @@ body {
 .image-container {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
   margin-top: 40px;
 }
 
@@ -251,6 +252,20 @@ body {
   height: 300px;
   border-radius: 50%;
   inline-size: 300px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.image-container img {
+  display: grid;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  inline-size: 300px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.image-container img:hover {
+  transform: scale(1.1) translateY(-10px);
 }
 
 .github-link {
